<resources>
    <string name="app_name">CVRCE Canteen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hello User</string>
    <string name="nav_header_subtitle">Student</string>
    <string name="nav_header_desc">Navigations</string>
    <string name="action_settings">Logout</string>
    <string name="item_type_logo">Item type logo</string>

    <string name="nav_orderFood">Order Food</string>
    <string name="nav_prevOrders">Previous Orders</string>
    <string name="nav_menu">Menu</string>
    <string name="nav_wallet">Wallet</string>
    <string name="nav_communicate">Communicate</string>
    <string name="nav_help">Help</string>
    <string name="nav_appFeedback">App Feedback</string>

    <string name="goToCartBtn">Go To Cart</string>
    <string name="totalPrice">"Total"</string>
    <string name="title_activity_canteen_login">Sign In</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Username/Registration number</string>
    <string name="prompt_password">Enter Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="url">http://192.168.43.214/collegecanteen/</string>
    <string name="title_activity_login">Sign in</string>
</resources>
