<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_orderFood"
            android:icon="@drawable/icon_order"
            android:title="@string/nav_orderFood" />
        <item
            android:id="@+id/nav_prevOrders"
            android:icon="@drawable/icon_order_history"
            android:title="@string/nav_prevOrders" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/icon_food_menu"
            android:title="@string/nav_menu" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/wallet"
            android:title="@string/nav_wallet" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/icon_help"
                android:title="@string/nav_help" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/icon_app_feedback"
                android:title="@string/nav_appFeedback" />
        </menu>
    </item>

</menu>
